# jlif

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pages.yml  release.yml
doc/adr/: 0003-json-processing-dependencies.md  0004-error-handling-strategy.md  0005-test-location-strategy.md  0007-use-mimalloc-as-global-allocator.md  0008-regex-crate-for-pattern-matching.md
docs/adr/: 0001-record-architecture-decisions.md  0002-cli-argument-parsing-library-choice.md  0003-json-processing-dependencies.md  0006-rstest-for-parameterized-testing.md  0009-trait-based-filter-architecture.md
docs/pages/: config.yaml  imprint.html  index.html  theme.css
docs/pages/assets/: demo.webm
docs/pages/sections/: footer.html  hero.html  highlights.html  quick-start.html
docs/pages/styles/: layout.css  theme.css
docs/vhs/: README.md  demo.tape  mock-logs.sh  record.sh
scripts/: benchmark.sh  test.json
src/: buffer.rs  cli.rs  filter.rs  formatter.rs  main.rs  processor.rs
