[package]
name = "jlif"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
colored_json = "5.0.0"
enum_dispatch = "0.3.13"
mimalloc = "0.1.47"
regex = "1.11.1"
serde_json = { version = "1.0.141", features = ["preserve_order"] }
thiserror = "2.0.12"


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # "s" prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
rstest = "0.26.1"
