[package]
name = "jlif"
version = "1.1.0"
edition = "2024"
authors = ["Jakob Westhoff <jakob@westhoffswelt.de>"]
license = "MPL-2.0"
description = "A fast CLI tool for processing and formatting JSON data from streaming input sources"
repository = "https://github.com/jakobwesthoff/jlif"
homepage = "https://jlif.westhoffswelt.de"
keywords = ["json", "log", "formatter", "stream", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
colored_json = "5.0.0"
enum_dispatch = "0.3.13"
mimalloc = "0.1.47"
regex = "1.11.1"
serde = "1.0.219"
serde_json = { version = "1.0.141", features = ["preserve_order"] }
thiserror = "2.0.12"


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # "s" prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
rstest = "0.26.1"
